# cmapf-solver

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md
.github/workflows/: ci.yml
app/: console_main.cpp  main.cpp
cmake/: Boost.cmake  CodeCoverage.cmake  Colors.cmake  ConfigSafeGuards.cmake  Doctest.cmake  Documentation.cmake  LTO.cmake  Misc.cmake  Warnings.cmake
experiments/: enumerate.sh  gen_base_exp.sh  gen_exp.sh  generate_exp.py  make_plot.py  parse_log.py  plot.p  run.sh  run_all.sh
experiments/aamas/: castarnorand.gp  make_plot.sh  plot.p
experiments/aamas/logs100-no-shake/: obstacles_success.csv  offices_range1_agents10__CASTAR_CHECK_COLLISIONS  offices_range1_agents10__CASTAR_CHECK_COLLISIONS.csv  offices_range1_agents11__CASTAR_CHECK_COLLISIONS  offices_range1_agents11__CASTAR_CHECK_COLLISIONS.csv  offices_range1_agents12__CASTAR_CHECK_COLLISIONS  offices_range1_agents12__CASTAR_CHECK_COLLISIONS.csv  offices_range1_agents13__CASTAR_CHECK_COLLISIONS  offices_range1_agents13__CASTAR_CHECK_COLLISIONS.csv  offices_range1_agents14__CASTAR_CHECK_COLLISIONS  offices_range1_agents14__CASTAR_CHECK_COLLISIONS.csv  offices_range1_agents15__CASTAR_CHECK_COLLISIONS  offices_range1_agents15__CASTAR_CHECK_COLLISIONS.csv  (+623 more)
experiments/cmarrt-data/: parallel_range1_agents10_11.exp  parallel_range1_agents11_8.exp  parallel_range1_agents12_19.exp  parallel_range1_agents13_4.exp  parallel_range1_agents14_11.exp  parallel_range1_agents15_14.exp  parallel_range1_agents16_6.exp  parallel_range1_agents17_5.exp  parallel_range1_agents18_18.exp  parallel_range1_agents19_9.exp  parallel_range1_agents20_0.exp  parallel_range1_agents21_12.exp  parallel_range1_agents22_5.exp  parallel_range1_agents23_5.exp  parallel_range1_agents24_16.exp  parallel_range1_agents25_3.exp  parallel_range1_agents26_15.exp  parallel_range1_agents27_16.exp  parallel_range1_agents28_8.exp  parallel_range1_agents29_15.exp  parallel_range1_agents2_11.exp  parallel_range1_agents30_4.exp  parallel_range1_agents31_5.exp  parallel_range1_agents32_0.exp  parallel_range1_agents33_14.exp  parallel_range1_agents34_5.exp  parallel_range1_agents35_9.exp  parallel_range1_agents36_18.exp  parallel_range1_agents37_1.exp  parallel_range1_agents38_8.exp  parallel_range1_agents39_9.exp  parallel_range1_agents3_8.exp  parallel_range1_agents40_1.exp  parallel_range1_agents4_13.exp  parallel_range1_agents5_8.exp  parallel_range1_agents6_15.exp  parallel_range1_agents7_2.exp  parallel_range1_agents8_5.exp  parallel_range1_agents9_11.exp
experiments/data/: open13_range50_100__0.exp  open13_range50_100__1.exp  open13_range50_100__2.exp  open13_range50_100__3.exp  open13_range50_100__4.exp  open13_range50_100__5.exp  open13_range50_100__6.exp  open13_range50_100__7.exp  open13_range50_100__8.exp  open13_range50_100__9.exp  open13_range50_101__0.exp  open13_range50_101__1.exp  open13_range50_101__2.exp  open13_range50_101__3.exp  open13_range50_101__4.exp  open13_range50_101__5.exp  open13_range50_101__6.exp  open13_range50_101__7.exp  open13_range50_101__8.exp  open13_range50_101__9.exp  open13_range50_102__0.exp  open13_range50_102__1.exp  open13_range50_102__2.exp  open13_range50_102__3.exp  open13_range50_102__4.exp  open13_range50_102__5.exp  open13_range50_102__6.exp  open13_range50_102__7.exp  open13_range50_102__8.exp  open13_range50_102__9.exp  open13_range50_103__0.exp  open13_range50_103__1.exp  open13_range50_103__2.exp  open13_range50_103__3.exp  open13_range50_103__4.exp  open13_range50_103__5.exp  open13_range50_103__6.exp  open13_range50_103__7.exp  open13_range50_103__8.exp  open13_range50_103__9.exp  (+1871 more)
experiments/small/: map1.exp  map1.png_comm_uniform_grid_1_range_20.graphml
include/: AStar.cpp  AppConfig.h.in  BoundedSolver.hpp  CAStar.hpp  CBS.hpp  CCBS.hpp  CMAPF.hpp  CMARRT.hpp  CTNOrderingStrategy.hpp  Common.hpp  Configuration.hpp  Conflict.hpp  ConflictSelectionStrategy.hpp  Constraint.hpp  ConstraintTreeNode.hpp  CoordSolver.hpp  DFS.hpp  Execution.hpp  FloydWarshall.hpp  Graph.hpp  Heuristics.hpp  HighLevel.hpp  Instance.hpp  InstanceCreator.hpp  InstanceLoader.hpp  LRAStar.hpp  Logger.hpp  LowLevel.hpp  MAS.hpp  Objective.hpp  Options.hpp  Path.hpp  PriorityQueue.hpp  ShortestPathCalculator.hpp  ShortestPathHeuristics.hpp  Solver.hpp  TopologicalGraph.hpp
src/: Configuration.cpp  ConstraintTreeNode.cpp  Execution.cpp  Graph.cpp  InstanceLoader.cpp  Path.cpp
tests/: CAStar.cpp  CBS.cpp  CCBS.cpp  CMakeLists.txt  CommonTest.hpp  Configuration.cpp  ConstraintTreeNode.cpp  DFS.cpp  Execution.cpp  FloydWarshall.cpp  Graph.cpp  InstanceLoader.cpp  LRAStar.cpp  LowLevel.cpp  MAS.cpp  Objective.cpp  Path.cpp
tests/assets/: 1.exp  Test1.exp  Test1_comm_uniform_grid_1_range_3.graphml  Test1_phys_uniform_grid_1_range_3.graphml  smallmaze.png_comm_uniform_grid_1_range_3.graphml  smallmaze.png_phys_uniform_grid_1_range_3.graphml
(+2285 files in other folders)
